--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,15 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
   - title: "CV"
     url: /cv/
+  
+  # - title: "Publications"
+  #   url: /publications/
 
-  # - title: "Talks"
-  #   url: /talks/    
+  - title: "Research"
+    url: /talks/    
+
+  
 
   # - title: "Teaching"
   #   url: /teaching/    
