revise the publication links

--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Falu Hong"
   avatar           : "profile2.png"
-  bio              : "PhD at UConn"
+  bio              : "Ph.D. at UConn"
   location         : #"Location"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=BokVjCUAAAAJ&hl=en"
-  email            :
+  email            : "faluhong@uconn.edu"
   researchgate     : "https://www.researchgate.net/profile/Falu-Hong"
   uri              :
   bitbucket        :
