--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Falu Hong"
-  avatar           : "profile2.png"
+  avatar           : "profile.png"
   bio              : "Ph.D. at UConn"
   location         : #"Location"
   employer         :
