--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/faluhong"
+  github           : "faluhong"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/falu-hong-a105b1129/"
+  linkedin         : "linkedin.com/in/falu-hong-a105b1129"
   twitter          : "falu_hong"
   orcid            : "https://orcid.org/0000-0002-2383-1670"
   pinterest        :
