--- a/_config.yml
+++ b/_config.yml
@@ -103,8 +103,8 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "falu-hong-a105b1129"
-  x                : "falu_hong"
-  twitter          : "falu_hong"
+  x-twitter        : "falu_hong"
+#  twitter          : "falu_hong"
   orcid            : "https://orcid.org/0000-0002-2383-1670"
   pinterest        :
   soundcloud       :
